# qa_training

./: .gitignore  Dockerfile  Makefile  README.md  app.py  cui_app.py  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
configs/repo/: RepoCleansedData.yaml  RepoFeatures.yaml  RepoInputData.yaml  RepoModel.yaml  RepoOutputData.yaml  RepoRawData.yaml
configs/usecase/: UsecaseCreateModel.yaml
data/model/: model.pkl
docker/: Dockerfile  docker-compose.yml
docs/: all_operation.drawio  domain_model.md  gen_ref_pages.py  map.drawio  modeling.drawio  requirements.md  requrements.md  usecase_menu.md
docs/css/: material.css  mkdocstrings.css  style.css
src/qa_training/: main.py  temp.py
src/qa_training/adapter/: controler_create_model.py  controler_judge_survival.py  controller_create_model.py  controller_judge_survival.py  cui_app.py  repo_input_data.py  repo_model.py  repo_output_data.py
src/qa_training/adapter/repo/: repo_cleansed_data.py  repo_features.py  repo_model.py  repo_raw_data.py
src/qa_training/dash_app/: app.py  create_model_page.py  custom_page.py  page.py  sidebar.py
src/qa_training/domain/: customer_info.py  factory_ml_model.py  ml_model.py  service_input_data.py  service_load_dataset.py  service_make_features.py  service_predict.py  service_train.py
src/qa_training/temp/: temp.py
src/qa_training/usecase/: usecase_create_model.py  usecase_judge_survival.py
src/qa_training/utils/: config_manager.py  domain_registry.py  factory_logger.py  logging.py  my_assert_frame_equal.py  override_wrappter.py
tests/common_data/: df_X.csv  df_customer_info.csv  df_id.csv  df_results_expected.csv  df_y.csv  df_y_pred_expected.csv  test.csv  train.csv
tests/common_data/configs/repo/: RepoInputData.yaml  RepoModel.yaml  RepoOutputData.yaml
tests/common_data/configs/usecase/: UsecaseCreateModel.yaml  UsecaseJudgeSurvival.yaml
tests/qa_training/: conftest.py
tests/qa_training/adapter/: conftest.py  test_controller_create_model.py  test_controller_judge_survival.py
tests/qa_training/dash_app/: test_app.py
tests/qa_training/domain/: test_service_load_dataset.py  test_service_make_features.py  test_service_predict.py  test_service_train.py
tests/qa_training/usecase/: conftest.py  test_usecase_create_model.py  test_usecase_judge_survival.py
tests/qa_training/utils/: conftest.py  test_config_manager.py  test_domain_registry.py
(+66 files in other folders)
