[tool.poetry]
name = "qa-training"
version = "0.1.0"
description = ""
authors = ["maji <majitaki1234@gmail.com>"]
readme = "README.md"
packages = [{include = "qa_training"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
omegaconf = "^2.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
ruff = "^0.0.257"
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.3"
mkdocs-glightbox = "^0.3.2"
mkdocs-drawio-exporter = "^0.8.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-table-reader-plugin = "^2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = false