[tool.poetry]
name = "qa_training"
version = "0.1.0"
description = ""
authors = ["maji <majitaki1234@gmail.com>"]
readme = "README.md"
packages = [
    { include = "qa_training", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
omegaconf = "^2.3.0"
pandas = "^2.0.0"
scikit-learn = "^1.2.2"
click = "^8.1.3"
python-json-logger = "^2.0.7"
fastapi = "^0.95.1"
dash = "^2.9.3"
dash-bootstrap-components = "^1.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
ruff = "^0.0.257"
pytest-html = "^3.2.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = false

[tool.ruff]
select = ["E", "F", "I", "N", "W", "PL", "UP"]
ignore = ["E402", "N801", "N802","N803",  "N806"]
line-length = 88
target-version = "py310"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "google"